# serializer version: 1
# name: test_aboutBlank_reload_checkEvents
  list([
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'id': 'stable_3',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'success',
    }),
  ])
# ---
# name: test_navigate_aboutBlank_checkEvents
  list([
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'id': 'stable_3',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'success',
    }),
  ])
# ---
# name: test_navigate_dataUrl_checkEvents
  list([
    dict({
      'method': 'network.beforeRequestSent',
      'params': dict({
        'context': 'stable_0',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_4',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_3',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseStarted',
      'params': dict({
        'context': 'stable_0',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_4',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseCompleted',
      'params': dict({
        'context': 'stable_0',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_4',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_3',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_3',
      }),
      'type': 'event',
    }),
    dict({
      'id': 'stable_5',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_3',
      }),
      'type': 'success',
    }),
  ])
# ---
# name: test_reload_checkEvents
  list([
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_0',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'id': 'stable_3',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'success',
    }),
  ])
# ---
